--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Compiled JavaScript files
-*.js
+# Compiled JavaScript files (Vercel will generate these)
+game.js
+game.js.map
 *.js.map
 
 # TypeScript cache
